0.02
 [Common]
 - Improve AUTHOR and LICENSE AND COPYRIGHT sections in doc.
 - Update copyright years.

 [PYX::Parser]
 - REWRITE API: Rewrite raw constructor parameters to 'callbacks' hash
   reference.
 - Add 'non_parser_options' parameter.
 - Add error check for 'output_handler' parameter.
 - Add test comments for parse_file() method.
 - Fix SYNOPSIS section in doc.
 - Fix check for $out variable in parse(), parse_file() and parse_handler()
   methods.
 - Rename 'line' parameter to internal name '_line'.
 - Rename test to right name (parse -> parse_file).

0.01 2014-11-18T07:30:12+01:00
 - First version.